<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="TextView"
                android:gravity="center"
                android:background="@drawable/textlines" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="TextView"
                android:gravity="center"
                android:background="@drawable/textlines" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="TextView"
                android:gravity="center"
                android:background="@drawable/textlines"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3">>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="TextView"
                android:gravity="center"
                android:background="@drawable/textlines" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="TextView"
                android:gravity="center"
                android:background="@drawable/textlines" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="TextView"
                android:gravity="center"
                android:background="@drawable/textlines" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="TextView"
                android:gravity="center"
                android:background="@drawable/textlines" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="TextView"
                android:gravity="center"
                android:background="@drawable/textlines" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="TextView"
                android:gravity="center"
                android:background="@drawable/textlines" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/winner_s_name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/winnerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/of_moves"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/numOfTurnsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="25dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prevTurnButton"
            android:layout_height="wrap_content"
            android:text="@string/previous_turn"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_width="0dp"/>

        <Button
            android:id="@+id/nextTurnButton"
            android:layout_height="wrap_content"
            android:text="@string/next_turn"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_width="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitButton"
            android:layout_height="wrap_content"
            android:text="@string/submit_name"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_width="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>